css/index.css
/*
 * Sigma Phi Delta
 * Author: Varun Shivakumar
 * Editor:
 *
 *
 */

/* FONT FACES
@font-face  {  font-family: "Geo";        src: url('fonts/Geomanist-Regular.otf')   format("opentype");     }
@font-face  {  font-family: "DStroke";    src: url('fonts/Distant_Stroke.otf')      format("opentype");     }
@font-face  {  font-family: "Roboto";     src: url('fonts/Roboto-Regular.ttf')      format("truetype");     }
@font-face  {  font-family: "Porter";     src: url('fonts/Porter Bold.ttf')         format("truetype");     }
*/
@font-face  {  font-family: "Amaranth";      src: url('../fonts/Amaranth-Regular.ttf') format("truetype");     }
@font-face  {  font-family: "Liberation Sans";      src: url('../fonts/LiberationSans-Regular.ttf') format("truetype");     }
@font-face  {  font-family: "Adam";       src: url('../fonts/adamcg.otf')           format("opentype");     }

.opensans   {  font-family: 'Roboto', sans-serif;                                                        }

/* Font Sizes : 10 to 20, 20 to 40 in multiples of 4 */

.fontSize40{  font-size: 2.5em;     }
.fontSize36{  font-size: 2.25em;    }
.fontSize32{  font-size: 2em;       }
.fontSize28{  font-size: 1.75em;    }
.fontSize24{  font-size: 1.5em;     }

.fontSize20{  font-size: 1.25em;    }
.fontSize19{  font-size: 1.1875em;  }
.fontSize18{  font-size: 1.125em;   }
.fontSize17{  font-size: 1.0625em;  }
.fontSize16{  font-size: 1em;       }
.fontSize15{  font-size: 0.9375em;  }
.fontSize14{  font-size: 0.875em;   }
.fontSize13{  font-size: 0.8125em;  }
.fontSize12{  font-size: 0.75em;    }
.fontSize11{  font-size: 0.6875em;  }
.fontSize10{  font-size: 0.625em;   }

/* Alignment */
.centerText         {  text-align: center;                          }
.leftText         {  text-align: left;                          }
.centerDiv          {  margin-left: auto; margin-right: auto;       }
.centerVert          {display:flex;text-align: left;align-items:center;}

.floatLeft          {  float: left;                                 }
.floatRight         {  float: right;                                }

.vertAlignMid       {  vertical-align: middle;                      }
.vertAlignTop       {  vertical-align: top;                         }
.vertAlignBot       {  vertical-align: bottom;                      }

/* Simple Borders : Mainly used for debugging */
.bordRed            {  border: 1px solid red;                       }
.bordBlack          {  border: 1px solid black;                     }
.bordWhite          {  border: 1px solid white;                     }

/* Border Radius : Used for rounded corners */
.bordRad50          {  border-radius: 50%;                          }
.bordRad5           {  border-radius: 5px;                          }

/* Display */
.inlineBlock        {  display: inline-block;                       }
.block              {  display: block;                              }
.inline             {  display: inline;                             }

/* Height */
.height110vh        {  height: 110vh;                               }
.height100          {  height: 100%;                                }

/* Width */
.width100           {  width: 100%;                                 }

/* Font Styling */
.boldText           {  font-weight: bold;                           }

/* Margin */
.marg0              {  margin: 0;                                   }

/* Padding */
.pad0               {  padding: 0;                                  }
.pad8               {  padding: 16px;                               }

.overflowHidden     {  overflow: hidden;                            }

/* Position */
.posAbs             {  position: absolute;                          }
.posRel             {  position: relative;                          }
.posFix             {  position: fixed;                             }

.top0               {  top: 0;                                      }

/* Z-Index : Used for overlapping elements. Higher number for element on top */
.z-1                {  z-index: -1;                                 }
.z0                 {  z-index: 0;                                  }
.z1                 {  z-index: 1;                                  }
.z2                 {  z-index: 2;                                  }


/* Colors */
.colWhite, .colWhite:hover           {  color: white;               }
.colBlack           {  color: black;                                }
.colDefault         {  color: black;                                }

/* Background Color */
.backColWhite       {  background-color: white;                     }
.backColLGray       {  background-color: lightgrey;                 }
.backColBlack       {  background-color: black;                     }

/* Links */
.textDecNone, .textDecNone:active, .textDecNone:visited, .textDecNone:hover {
    text-decoration: none;

}
strong{
    color: #FF5655;
}
p{
    line-height: 30px;
}

/* Text Shadow text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; */

/* Rush Button */
#rushBtn{
    border-bottom: 4px solid #DE2B2A;
    cursor: pointer;
    background-color: #F7302F;
    color: white;
    border-radius: 20px;
    padding: 15px 15px 5px 15px;
    font-size: 2vw;
    margin: 50px auto;
    font-family: Adam, sans-serif;
    position: relative;
}
#rushBtn:hover{
    border: none;
    top: 4px;
}
#rushBtn:active{
    -webkit-box-shadow: inset 0 4px 5px #9E1F1E;
    -moz-box-shadow: inset 0 4px 5px #9E1F1E;
    box-shadow: inset 0 4px 5px  #9E1F1E;
}


/* Shadow */
.shadowTop{
    box-shadow: 0 -10px 6px -6px #777;
    -webkit-box-shadow: 0 -10px 6px -6px #777;
    -moz-box-shadow: 0 -10px 6px -6px #777;
}
.shadowBottom{
    box-shadow: 0 10px 6px -6px #777;
    -webkit-box-shadow: 0 10px 6px -6px #777;
    -moz-box-shadow: 0 10px 6px -6px #777;
}
.shadow{
    box-shadow: 0 0 20px rgba(0,0,0,0.4);
    -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);
    -moz-box-shadow: 0 0 20px rgba(0,0,0,0.4);
}
.shadowContact{
    -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
}


/* Navigation Bar */
.navbaritem{
    font-family: 'Open Sans', sans-serif;
    line-height: 45px;
    color: white;
    text-align: center;
    cursor: pointer;
    font-weight: bold;
    font-size: 16px;
    text-decoration: none;

    /*width: 14.285714285%;/* for Alumni Page */
    width: 16.6666667%; /* no alumni page */
    display: table-cell;
}
.navbaritem:active, .navbaritem:focus{
    text-decoration: none;
}
.selnavbaritem{
    background-color: #c52625;
    font-size: 20px;

}
/* Slideshow */

.slideshow > div.imgCont > img{
    text-align: center;

}

#slideshow1{  z-index: 8;  }
#slideshow2{  z-index: 7;  }
#slideshow3{  z-index: 6;  }
#slideshow4{  z-index: 5;  }
#slideshow5{  z-index: 4;  }
#slideshow6{  z-index: 3;  }
#slideshow7{  z-index: 2;  }


/* Event Page */
.event{
    width: 360px;
    padding: 8px;
    margin: 15px;
    border-radius: 5px;
    background-color: white;
}
.event:hover{
    background-color: #F7302F;
}
.event img.enlarge {
    display: none;
    z-index: 50;
    position: absolute;
    top: 0;
    left: -50%;
}
/*
.event:hover img.enlarge{
    display: block;

}
*/

/* Members Page */
.grid-item{
    overflow: hidden;
}

.cmCont{
    height: 35px;width: 35px;
    border-radius: 50%;
    background-color:  #F7302F;
}
#load{
    width: 880px;
    height:600px;
    position:absolute;
    z-index:9999;
}

/* Footer Icon */
.icon:hover{
    color: #F7302F;
}

